--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,10 +19,9 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="119dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="152dp"
         android:text="Button" />
 
 </RelativeLayout>
